resource_style.css
/* 

This document defines the appearance of links to external resources, such as the link on the 
Governing Documents page to the Articles of Association.

*/
.docs {
  display: flex;
  flex-wrap: wrap;
  margin: 0 -5px;
}
.item {
  width: 150px;
  margin: 0 5px 10px;
  position: relative;
  background: #00c7b2;
}
.item::after {
  content: "";
  width: 0;
  height: 0;
  margin-left: -30px;
  position: absolute;
  bottom: 0;
  left: 100%;
  border: 15px solid #f3f3f4;
  border-left: 15px solid transparent;
  border-top: 15px solid transparent;
}
.item p {
  padding: 50px 10px 0px 10px;
}
.item a {
  color: #f3f3f4;
}
    

